<resources>
    <string name="app_name">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sighup">sighup</string>
    <string name="e_mail">E-mail</string>
    <string name="create_account">create account</string>
    <string name="no_of_attempts">no of attempts</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="already_have_string_create_account">Already have @string/create_account</string>
    <string name="register">Register</string>
    <string name="register_account">register account</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="go_back_signin">Go back -signin</string>
    <string name="button">Button</string>
    <string name="logout">Logout</string>
    <string name="e_mail_id">E-mail ID</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="Email_address">Email Address</string>
    <string name="age">Age</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="edit">Edit</string>
    <string name="eMail">eMail</string>
    <string name="change_password">Change Password</string>
    <string name="todo1">TODO1</string>
    <string name="new_password">new Password</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="FingerPrint">TextView</string>
    <string name="Fingerprint">Button</string>
    <string name="fingerprint">Fingerprint</string>

</resources>
